syntax = "proto3";

package chat.service.v1;

import "google/api/annotations.proto";

option go_package = "im-service/api/chat/service/v1;v1";
option java_multiple_files = true;
option java_package = "chat.service.v1";

service Ws {
	// WsClient绑定用户
	rpc BindMember (BindMemberRequest) returns (BindMemberReply);
	// WsClient绑定聊天组
	rpc BindGroup (BindGroupRequest) returns (BindGroupReply);
	// WsClient取消聊天组绑定
	rpc CancelGroup (CancelGroupRequest) returns (CancelGroupReply);
	// 发送系统消息
	rpc SendMsg (SendMsgRequest) returns (SendMsgReply);
  // 退出聊天组与删除记录
	rpc DelGroupColl (DelGroupCollRequest) returns (DelGroupCollReply);
	// 获取聊天组消息记录
	rpc GetGroupHistory (GetGroupHistoryRequest) returns (GetGroupHistoryReply);
}

message BindMemberRequest {
	uint64 member_id = 1;
	string client_id = 2;
}

message BindMemberReply {}

message BindGroupRequest {
	string group_id = 1;
	uint64 member_id = 2;
}

message BindGroupReply {}

message CancelGroupRequest {
	uint64 member_id = 1;
}

message CancelGroupReply {}

message SendMsgRequest {
	uint64 member_id = 1;
	string content = 2;
}

message SendMsgReply {}

message DelGroupCollRequest {
	string group_id = 1;
	uint64 member_id = 2;
}

message DelGroupCollReply {

}

message GetGroupHistoryRequest {
	string group_id = 1;
	uint64 member_id = 2;
	string last_id = 3;
	uint64 page_size = 4;
}

message MsgHistory {
	string message_id = 1;
	uint64 member_id = 2;
	string content_type = 3;
	string content = 4;
	string create_at = 5;
	string id = 7;
}

message GetGroupHistoryReply {
	repeated MsgHistory msg_list = 1;
}